--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,16 +2,16 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Run Lab5",
+      "name": "Run (active folder)",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/Lab5/main.exe",
+      "program": "${fileDirname}/main.exe",
       "args": [],
-      "cwd": "${workspaceFolder}/Lab5",
+      "cwd": "${fileDirname}",
       "externalConsole": true,
       "MIMode": "gdb",
       "miDebuggerPath": "C:/msys64/ucrt64/bin/gdb.exe",
-      "preLaunchTask": "Build Lab5 (all)"
+      "preLaunchTask": "Build (active folder)"
     }
   ]
 }
